Sugati/src/objects/Exchange_Rate__c.object
<CustomObject>
    <fields>
        <fullName>ER_Base_Currency__c</fullName>
        <inlineHelpText>Foreign Currency</inlineHelpText>
        <label>Foreign Currency</label>
        <picklist>
            <picklistValues>
                <fullName>AED</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AUD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BRL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CAD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CHF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DKK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EUR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FJD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GBP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HKD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HUF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ISK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>JOD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MAD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MUR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MYR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NAD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NOK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NZD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OMR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PGK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PHP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PLN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>QAR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RUB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SEK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SGD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>THB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>USD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ZAR</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ER_Book_From__c</fullName>
        <description>Booking Date From</description>
        <inlineHelpText>Booking Date From</inlineHelpText>
        <label>Book From</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ER_Book_To__c</fullName>
        <label>Book To</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ER_Exchange_Rate__c</fullName>
        <label>Exchange Rate</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ER_Sales_Currency__c</fullName>
        <label>Sales Currency</label>
        <picklist>
            <picklistValues>
                <fullName>GBP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>USD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CHF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EUR</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ER_Travel_From__c</fullName>
        <label>Travel From</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ER_Travel_To__c</fullName>
        <label>Travel To</label>
        <type>Date</type>
    </fields>
    <label>Exchange Rate</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>ER_Book_From__c</columns>
        <columns>ER_Book_To__c</columns>
        <columns>ER_Travel_From__c</columns>
        <columns>ER_Travel_To__c</columns>
        <columns>ER_Exchange_Rate__c</columns>
        <columns>ER_Sales_Currency__c</columns>
        <columns>ER_Base_Currency__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Base_Currency_EUR</fullName>
        <columns>NAME</columns>
        <columns>ER_Book_From__c</columns>
        <columns>ER_Book_To__c</columns>
        <columns>ER_Travel_From__c</columns>
        <columns>ER_Travel_To__c</columns>
        <columns>ER_Exchange_Rate__c</columns>
        <columns>ER_Sales_Currency__c</columns>
        <columns>ER_Base_Currency__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ER_Sales_Currency__c</field>
            <operation>equals</operation>
            <value>EUR</value>
        </filters>
        <label>Base Currency = EUR</label>
    </listViews>
    <listViews>
        <fullName>Base_Currency_GBP</fullName>
        <columns>NAME</columns>
        <columns>ER_Book_From__c</columns>
        <columns>ER_Book_To__c</columns>
        <columns>ER_Travel_From__c</columns>
        <columns>ER_Travel_To__c</columns>
        <columns>ER_Exchange_Rate__c</columns>
        <columns>ER_Sales_Currency__c</columns>
        <columns>ER_Base_Currency__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ER_Sales_Currency__c</field>
            <operation>equals</operation>
            <value>GBP</value>
        </filters>
        <label>Base Currency = GBP</label>
    </listViews>
    <listViews>
        <fullName>Base_Currency_USD</fullName>
        <columns>NAME</columns>
        <columns>ER_Book_From__c</columns>
        <columns>ER_Book_To__c</columns>
        <columns>ER_Travel_From__c</columns>
        <columns>ER_Travel_To__c</columns>
        <columns>ER_Exchange_Rate__c</columns>
        <columns>ER_Sales_Currency__c</columns>
        <columns>ER_Base_Currency__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ER_Sales_Currency__c</field>
            <operation>equals</operation>
            <value>USD</value>
        </filters>
        <label>Base Currency = USD</label>
    </listViews>
    <nameField>
        <displayFormat>ER-{00000000}</displayFormat>
        <label>Exchange Rate ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Exchange Rates</pluralLabel>
    <recordTypes>
        <fullName>Buy</fullName>
        <active>true</active>
        <label>Buy</label>
    </recordTypes>
    <recordTypes>
        <fullName>Sell</fullName>
        <active>true</active>
        <label>Sell</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>